# file_crawler

./: .file_crawler.cpp.kate-swp  .gitignore  CMakeLists.txt  Game.cpp  Game.h  Main.cpp  README.md  TODO.md  build.sh  color_debug.cpp  file_crawler.cpp  helpers.cpp  include.sh  install.sh  run.sh  run_in_kitty.sh  theme.sh
data/: theme.conf
data/items/: SmallPotion
src/: Game.cpp  Game.h  constants.h  helpers.cpp  helpers.h  include.h  struct.txt
src/components/: Frame.h  GameMap.h  Intent.h  Position.h  Tile.h
src/components/action/: Intent.h
src/components/action/skill/: Skill.h
src/components/enemy/: Monster.h
src/components/entity/: Entity.h
src/components/entity/actors/enemy/: Monster.h
src/components/entity/actors/player/: Player.h
src/components/entity/item/: Container.h  Item.h  ItemTypes.h
src/components/graphics/: Color.h  Frame.h  Light.h  Pixel.h  RawColor.h  Sprite.h
src/components/item/: Item.h  ItemTypes.h
src/components/map/: EntityMap.h  GameMap.h  LightMap.h  MapMeta.h  Meta.h  Position.h  Tile.h
src/components/player/: Player.h
src/components/skill/: Skill.h
src/story/: Quest.h
src/systems/entity/: Entity.cpp  Entity.h
src/systems/generation/: GameMap.cpp  GameMap.h
src/systems/graphics/: Lighting.cpp  Lighting.h  Render.cpp  Render.h
src/systems/interface/: UI.cpp  UI.h
src/systems/lighting/: Lighting.cpp  Lighting.h
src/systems/story/: Quest.cpp  Quest.h
src/templates/enemy/: BaseEnemies.cpp  BaseEnemies.h
src/templates/item/: BaseItems.cpp  BaseItems.h
src/templates/maps/: Bastion.cpp  Bastion.h
src/templates/player/: BaseClasses.cpp  BaseClasses.h
src/templates/skill/: BaseSkills.cpp  BaseSkills.h
test/: TitleCard  color.debug  mouse  mouse_test.cpp  title_card_test.1.cpp  title_card_test.2.cpp
